@@ -1,5 +1,5 @@
 kplex: A multiplexer for various nmea 0183 interfaces
-Copyright Keith Young 2012-2018 <stripydog7@gmail.com>
+Copyright Keith Young 2012-2020 <stripydog7@gmail.com>
 Blurb:
 Details of the GPLv3 under which this software is distributed can be found in
 the file COPYING in this directory.
