@@ -1,6 +1,6 @@
 /* tcp.c
  * This file is part of kplex
- * Copyright Keith Young 2012-2019
+ * Copyright Keith Young 2012-2020
  * For copying information see the file COPYING distributed with this software
  */
 
@@ -619,6 +619,7 @@ iface_t *new_tcp_conn(int fd, iface_t *ifa)
     newifa->type=TCP;
     newifa->name=ifa->name;
     newifa->info=newift;
+    newifa->heartbeat = ifa->heartbeat;
     newifa->cleanup=cleanup_tcp;
     newifa->write=write_tcp;
     newifa->read=do_read;
@@ -660,6 +661,7 @@ iface_t *new_tcp_conn(int fd, iface_t *ifa)
     sigaddset(&set, SIGUSR1);
     pthread_sigmask(SIG_BLOCK, &set, &saved);
     link_to_initialized(newifa);
+    add_event(EVT_HB,(void *)newifa,0);
     pthread_create(&tid,NULL,(void *)start_interface,(void *) newifa);
     pthread_sigmask(SIG_SETMASK,&saved,NULL);
     return(newifa);
