@@ -1,5 +1,6 @@
 v1.5:
 * i8n
+* Added heartbeat option
 
 v1.4: January 6th 2019
 * Fixed crash with checksumming enabled
